src/objects/BulkDataEntry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom Setting to use with the Bulk Data Entry project</description>
    <fields>
        <fullName>Object_Default_Field_Set__c</fullName>
        <label>Object Default Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Entry_Field_Set__c</fullName>
        <description>What field set are you using for the data entry section of the page.</description>
        <label>Object Entry Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_List_Field_Set__c</fullName>
        <description>The field set you are using for the list on the page.</description>
        <label>Object List Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a batch do you want to save this batch.</description>
        <label>Save Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>BulkDataEntry</label>
</CustomObject>